<resources>
    <string name="app_name">MovieUp</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="update_button">Update</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="category">Category</string>
    <string name="home_page">HomePage</string>
    <string name="newest">New Movies</string>
    <string name="description">Description:</string>
    <string name="play">Play!</string>
    <string name="ratingLabel">IMDB:</string>
    <string name="releaseLabel">Release:</string>
    <string name="search">Search</string>
    <string name="categories">Categories:</string>
    <string name="addToFavoriteLabel">Add to favorite:</string>
    <string-array name="user_options">
        <item>Account Settings</item>
        <item>Favorite Movies</item>
        <item>Log Out</item>
        <item>Unselect</item>
    </string-array>
    <string name="title_activity_account_settings">AccountSettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>