<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-159dp"
        tools:layout_editor_absoluteY="104dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/app_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="170dp"
                    android:fontFamily="@font/spicy_rice"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="35sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/usernameTextRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/black"
                    android:ems="10"
                    android:fontFamily="sans-serif-black"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#252525"
                    android:textSize="26sp"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="266dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordTextRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/black"
                    android:ems="10"
                    android:fontFamily="sans-serif-black"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="#252525"
                    android:textSize="26sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/passwordConfirmTextRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/black"
                    android:ems="10"
                    android:fontFamily="sans-serif-black"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColorHint="#252525"
                    android:textSize="26sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailTextRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/black"
                    android:ems="10"
                    android:fontFamily="sans-serif-black"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#252525"
                    android:textSize="26sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/registerButtonRegister"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/buttonrounded"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/register_button"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>