<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D72E6895"
    tools:context=".Activities.MovieActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-159dp"
        tools:layout_editor_absoluteY="104dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"

                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:ems="10"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/ratingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratingLabel"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ratingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/viewtextrounded"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:isIndicator="true"
                android:numStars="10"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/black"
                android:transformPivotX="0dp"
                android:transformPivotY="35dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/releaseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/releaseLabel"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/releaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/viewtextrounded"
                android:textColor="@color/white"
                android:textSize="18sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                android:id="@+id/playButton"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonrounded"
                android:fontFamily="sans-serif-black"
                android:layout_centerInParent="true"
                android:text="@string/play"
                android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>